# python-msal-public-client-example

./: main.py  msal_handler.py  pyproject.toml
templates/: index.html
